--- a/Pipfile
+++ b/Pipfile
@@ -15,7 +15,7 @@ imageio = "==2.33.0"
 imageio-ffmpeg = "==0.4.9"
 macholib = "==1.16.3"
 moviepy = "==1.0.3"
-mutagen = "==1.47.0"
+mutagen = "*"
 numpy = "==1.26.2"
 packaging = "==23.2"
 pillow = "==10.1.0"
