--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,3 @@
-altgraph==0.17.4
-certifi==2023.11.17
-charset-normalizer==3.3.2
-decorator==4.4.2
-ffmpeg-python==0.2.0
-future==0.18.3
-idna==3.4
-imageio==2.33.0
-imageio-ffmpeg==0.4.9
-macholib==1.16.3
-moviepy==1.0.3
-mutagen==1.47.0
-numpy==1.26.2
-packaging==23.2
-Pillow==10.1.0
-proglog==0.1.10
-pydub==0.25.1
-pyinstaller==6.2.0
-pyinstaller-hooks-contrib==2023.10
 pytube==15.0.0
-requests==2.31.0
-setuptools==69.0.0
-tqdm==4.66.1
-urllib3==2.1.0
+pytubefix==6.13.1
+setuptools==74.0.0
